# event-based-cameras-tracking

./: .gitignore  .pre-commit-config.yaml  README.md  ROADMAPA.md  pyproject.toml  requirements.txt  run_recurrent_embedding_matrix.sh  setup.py
configs/: base_config.yaml
configs/experiments/: fast_train.yaml
docs/: architecture.md  event_reid_embedding_benchmark.md  multidataset_ovhcloud_training.md  pretrained_representation_benchmark.md  setup.md
scripts/: analyze_dsec_mot_class_distribution.py  convert_articles.py  convert_dsec_mot_to_evrtdetr_npz.py  evaluate.py  evaluate_evrtdetr_dsec_mot_trackeval.py  export_evrtdetr_dsec_mot.py  inference.py  render_dsec_mot_video.py  render_simple_detector_dsec_mot_demo.py  run_evrtdetr_dsec_mot.py  run_simple_tracker_dsec_mot.py  train.py  validate_dsec_mot.py
src/: __init__.py
src/data/: __init__.py  dataset.py  dense_targets.py  eros_precompute.py  preprocessing.py  pretrained_detection_dataset.py  representations.py  sequence_dataset.py  unified_manifest.py
src/evaluation/: __init__.py  detection_export.py  detection_metrics.py  detection_metrics_cli.py  evaluator.py  evrtdetr_export.py  evrtdetr_runtime.py  mot_trackers.py  pretrained_detector_trackeval_cli.py  simple_detector_trackeval_cli.py  simple_tracker.py  trackeval_adapter.py
src/experiments/: __init__.py  common.py  event_reid_embedding_benchmark.py  pretrained_representation_benchmark.py  simple_detector_car_only_benchmark.py  simple_detector_eros_benchmark.py  simple_detector_large_benchmark.py  simple_detector_representation_sweep.py  (+5 more)
(+45 files in other folders)
